--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,6 @@
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-require": "^0.0.1",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
@@ -32,11 +31,11 @@
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
-    "validator": "^13.9.0",
     "winston": "^3.9.0"
   }
 }
